fix: add tag and change visibility for buying tracks

--- a/src/main/webapp/css/footer_ST.css
+++ b/src/main/webapp/css/footer_ST.css
@@ -14,7 +14,8 @@ html {
   width: 100%;
   /* Set the fixed height of the footer here */
   padding: 10px;
-  background-color: #f5f5f5;
+  color: #1c1c1c;
+  background-color: #000000;
 }
 
 
